<resources>
    <string name="app_name">game-app</string>
    <string name="score">Score : 0 </string>
    <string name="swapCount">Count : 10 </string>
    <string name="highestScore">Highest Score : 0 </string>
    <string name="totalScore">5432</string>
    <string name="game_levels">Game Levels</string>
    <string name="symCount1">0</string>
    <string name="symCount2">0</string>
    <string name="symCount1D2">10</string>
    <string name="symCount2D2">10</string>
    <string name="try_again">Try Again…! </string>
    <string name="symCount1D3">10</string>
    <string name="symCount2D3">15</string>
    <string name="symCount1D4">15</string>
    <string name="symCount2D4">20</string>

</resources>