<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/p5"
    tools:context=".GameLevelsActivity">

    <LinearLayout
        android:id="@+id/topLay"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal"
        android:padding="2dp"
        android:gravity="center"
        android:background="@color/lightBlack"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/swapCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:text="@string/swapCount"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold|italic" />



    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/lightBlack"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="end">

        <ImageView
            android:id="@+id/sym1D"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:importantForAccessibility="no"
            android:src="@drawable/sm2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/sym2D"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:importantForAccessibility="no"
            android:src="@drawable/sm5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sym1D"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/symCount1D"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/symCount1D2"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toEndOf="@+id/sym1D"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/symCount2D"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/symCount2D2"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/sym2D" />

        <ImageView
            android:id="@+id/sym1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:importantForAccessibility="no"
            android:src="@drawable/sm2"
            app:layout_constraintEnd_toStartOf="@+id/sym2"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/sym2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:importantForAccessibility="no"
            android:src="@drawable/sm5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/symCount1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="240dp"
            android:text="@string/symCount1"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sym1" />

        <TextView
            android:id="@+id/symCount2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/symCount2"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sym2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <GridLayout
            android:id="@+id/board"
            android:orientation="horizontal"
            android:background="@color/lightBlack"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>